@@ -5,10 +5,6 @@ The goal is to take care of native builds and [CDI](https://quarkus.io/guides/cd
 ```java
   @Inject
   V8Host v8host; // V8 mode
-
-  @Inject
-  @Named("Node") // See JSRuntimeType
-  V8Host v8host;
 ```
 
 Also the extension should support [native image builds](https://quarkus.io/guides/building-native-image).
@@ -31,8 +27,6 @@ Despite attempts to [disable built-in library loading](https://www.caoccao.com/J
 so this is probably not a blocker.
 
 ### Runtime library loading
-
-With built-in JNI library loading replaced with build-time Quarkus processing,
 
 Without jni-config.json (OR the processor adding JniRuntimeAccessBuildItem?) we get an NPE from [JNIFunctions.java](https://github.com/oracle/graal/blob/vm-ce-21.3.0/substratevm/src/com.oracle.svm.jni/src/com/oracle/svm/jni/functions/JNIFunctions.java#L1095) that doesn't say which class is missing.
 
@@ -67,55 +61,72 @@ index 924061a..b803448 100644
    "name":"com.caoccao.javet.values.reference.IV8ValueReference",
 ```
 
-the test instead fails on:
-
-```
-2021-10-31 08:34:32,285 INFO  [JavetLibLoadingSetup] (main) Disabling Javet's built-in lib loader
-2021-10-31 08:34:32,299 INFO  [QuarkusJavetRecorder] (main) Loading /tmp/libjavet-v8-linux-x86_64.v.1.0.2.so
-2021-10-31 08:34:32,302 INFO  [JavetLibLoadingSetup] (main) Disabling Javet's built-in lib loader
-2021-10-31 08:34:32,336 INFO  [QuarkusJavetRecorder] (main) Loading /tmp/libjavet-node-linux-x86_64.v.1.0.2.so
-2021-10-31 08:34:32,349 INFO  [io.quarkus] (main) quarkus-javet-integration-tests 1.0.0-SNAPSHOT native (powered by Quarkus 2.4.0.Final) started in 0.068s. Listening on: http://0.0.0.0:8081
-2021-10-31 08:34:32,349 INFO  [io.quarkus] (main) Profile prod activated. 
-2021-10-31 08:34:32,349 INFO  [io.quarkus] (main) Installed features: [cdi, javet, resteasy, smallrye-context-propagation, vertx]
-[ERROR] WARNING: An illegal reflective access operation has occurred
-[ERROR] WARNING: Illegal reflective access by org.codehaus.groovy.vmplugin.v9.Java9 (file:/home/solsson/.m2/repository/org/codehaus/groovy/groovy/3.0.8/groovy-3.0.8.jar) to constructor java.lang.AssertionError(java.lang.String)
-[ERROR] WARNING: Please consider reporting this to the maintainers of org.codehaus.groovy.vmplugin.v9.Java9
-[ERROR] WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-[ERROR] WARNING: All illegal access operations will be denied in a future release
-2021-10-31 08:34:33,391 ERROR [io.qua.ver.htt.run.QuarkusErrorHandler] (executor-thread-0) HTTP Request to /quarkus-javet/v8 failed, error id: b5e14f63-5eaf-4f21-aff9-0f25f8a1d485-1: org.jboss.resteasy.spi.UnhandledException: com.caoccao.javet.exceptions.JavetException: Javet library is not loaded because <null>
-	at org.jboss.resteasy.core.ExceptionHandler.handleApplicationException(ExceptionHandler.java:106)
-	at org.jboss.resteasy.core.ExceptionHandler.handleException(ExceptionHandler.java:372)
-	at org.jboss.resteasy.core.SynchronousDispatcher.writeException(SynchronousDispatcher.java:218)
-	at org.jboss.resteasy.core.SynchronousDispatcher.invoke(SynchronousDispatcher.java:519)
-	at org.jboss.resteasy.core.SynchronousDispatcher.lambda$invoke$4(SynchronousDispatcher.java:261)
-	at org.jboss.resteasy.core.SynchronousDispatcher.lambda$preprocess$0(SynchronousDispatcher.java:161)
-	at org.jboss.resteasy.core.interception.jaxrs.PreMatchContainerRequestContext.filter(PreMatchContainerRequestContext.java:364)
-	at org.jboss.resteasy.core.SynchronousDispatcher.preprocess(SynchronousDispatcher.java:164)
-	at org.jboss.resteasy.core.SynchronousDispatcher.invoke(SynchronousDispatcher.java:247)
-	at io.quarkus.resteasy.runtime.standalone.RequestDispatcher.service(RequestDispatcher.java:73)
-	at io.quarkus.resteasy.runtime.standalone.VertxRequestHandler.dispatch(VertxRequestHandler.java:135)
-	at io.quarkus.resteasy.runtime.standalone.VertxRequestHandler$1.run(VertxRequestHandler.java:90)
-	at io.quarkus.vertx.core.runtime.VertxCoreRecorder$13.runWith(VertxCoreRecorder.java:543)
-	at org.jboss.threads.EnhancedQueueExecutor$Task.run(EnhancedQueueExecutor.java:2449)
-	at org.jboss.threads.EnhancedQueueExecutor$ThreadBody.run(EnhancedQueueExecutor.java:1478)
-	at org.jboss.threads.DelegatingRunnable.run(DelegatingRunnable.java:29)
-	at org.jboss.threads.ThreadLocalResettingRunnable.run(ThreadLocalResettingRunnable.java:29)
-	at io.netty.util.concurrent.FastThreadLocalRunnable.run(FastThreadLocalRunnable.java:30)
-	at java.lang.Thread.run(Thread.java:829)
-	at com.oracle.svm.core.thread.JavaThreads.threadStartRoutine(JavaThreads.java:596)
-	at com.oracle.svm.core.posix.thread.PosixJavaThreads.pthreadStartRoutine(PosixJavaThreads.java:192)
-Caused by: com.caoccao.javet.exceptions.JavetException: Javet library is not loaded because <null>
-Caused by: java.lang.reflect.InvocationTargetException
-Caused by: com.caoccao.javet.exceptions.JavetException: Failed to read /tmp/javet/52/libjavet-v8-linux-x86_64.v.1.0.2.so
-Caused by: java.lang.UnsatisfiedLinkError: /tmp/javet/52/libjavet-v8-linux-x86_64.v.1.0.2.so: /lib64/libstdc++.so.6: version `GLIBCXX_3.4.26' not found (required by /tmp/javet/52/libjavet-v8-linux-x86_64.v.1.0.2.so)
-```
-
 ## Devloop
 
 Without native build (this mode currently doesn't do anything useful);
 
 ```
 mvn clean install && (cd integration-tests/; mvn clean test)
+```
+
+## Builder image
+
+For builds to be platform independent we must use Quarkus' "container build" mode
+instead of the default local build.
+Howerver that mode doesn't seem to support our dependence on lib files
+extracted to /tmp during build "recording".
+
+```
+BUILDER_BASE=quay.io/quarkus/ubi-quarkus-mandrel:21.3-java11
+mvn dependency:unpack-dependencies -DincludeGroupIds=com.caoccao.javet
+cat <<EOF >>runtime/target/dependency/.dockerignore
+*
+!*.so
+EOF
+cat <<EOF >runtime/target/dependency/Dockerfile
+FROM $BUILDER_BASE as mandrel
+FROM ubuntu:20.04 as builder
+RUN set -ex; \
+  export DEBIAN_FRONTEND=noninteractive; \
+  apt-get update && apt-get install -y \
+    gcc \
+    g++ \
+    libc-dev \
+    zlib1g-dev \
+    --no-install-recommends; \
+  \
+  rm -rf /var/lib/apt/lists; \
+  rm -rf /var/log/dpkg.log /var/log/alternatives.log /var/log/apt /root/.gnupg
+COPY --from=mandrel /opt/mandrel /opt/mandrel
+ENV \
+  CI=true \
+  GRAALVM_HOME=/opt/mandrel \
+  JAVA_HOME=/opt/mandrel \
+  MAVEN_CONFIG=/home/nonroot/.m2 \
+  PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/mandrel/bin
+# https://github.com/caoccao/Javet/discussions/26
+#RUN strings /lib64/libstdc++.so.6 | grep GLIBCXX_3.4.26
+# docker inspect quay.io/quarkus/ubi-quarkus-mandrel:21.2.0.1-Final-java11
+RUN grep 'quarkus:x:1001' /etc/passwd || \
+  echo 'quarkus:x:1001:65534:Quarkus:/home/quarkus:/usr/sbin/nologin' >> /etc/passwd && \
+  mkdir -p /home/quarkus && touch /home/quarkus/.bash_history && chown -R 1001:65534 /home/quarkus
+USER 1001:nogroup
+ENTRYPOINT ["native-image"]
+#VOLUME /project
+WORKDIR /project
+COPY *.so /tmp/
+RUN ls -l /tmp/
+EOF
+docker build -t quarkus-javet-builder:local runtime/target/dependency/
+```
+
+TODO maybe it's dependency libs that are missing at build time:
+
+```
+The bundle named: messages, has not been found. If the bundle is part of a module, verify the bundle name is a fully qualified class name. Otherwise verify the bundle path is accessible in the classpath.
+04:26:25,635 SEVERE [com.cao.jav.int.loa.JavetLibLoader] /tmp/libjavet-node-linux-x86_64.v.1.0.3.so: /lib64/libm.so.6: version `GLIBC_2.29 not found (required by /tmp/libjavet-node-linux-x86_64.v.1.0.3.so)
+04:26:25,641 SEVERE [com.cao.jav.int.loa.JavetLibLoader] /tmp/libjavet-v8-linux-x86_64.v.1.0.3.so: /lib64/libstdc++.so.6: version `GLIBCXX_3.4.26 not found (required by /tmp/libjavet-v8-linux-x86_64.v.1.0.3.so)
+04:26:25,646 SEVERE [com.cao.jav.int.loa.JavetLibLoader] java.lang.UnsatisfiedLinkError: /tmp/libjavet-node-linux-x86_64.v.1.0.3.so: /lib64/libm.so.6: version `GLIBC_2.29' not found (required by /tmp/libjavet-node-linux-x86_64.v.1.0.3.so)
 ```
 
 ## Native test
@@ -125,10 +136,13 @@ Quarkus [docs](https://quarkus.io/guides/writing-extensions#multi-module-maven-p
 ```
 # Opts depend on the build and test environment
 NATIVE_BUILD_OPTS="-Dquarkus.native.remote-container-build=true"
-NATIVE_BUILD_OPTS="$NATIVE_BUILD_OPTS -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel:21.3-java11"
+NATIVE_BUILD_OPTS="$NATIVE_BUILD_OPTS -Dquarkus.native.builder-image=quarkus-javet-builder:local"
 NATIVE_BUILD_OPTS="$NATIVE_BUILD_OPTS -Dquarkus.native.enable-reports=true"
-# Get stdout from container-build docker run
-NATIVE_BUILD_OPTS="$NATIVE_BUILD_OPTS -Dquarkus.native.container-runtime-options=-ti"
+# Get stdout from container-build docker run; workaround for remote build volume not using builder's user
+NATIVE_BUILD_OPTS="$NATIVE_BUILD_OPTS -Dquarkus.native.container-runtime-options=-ti,--user=0:0"
+# https://github.com/caoccao/Javet/commit/a7dc048b665166d77c532f066281282fb7cdb1de
+#NATIVE_BUILD_OPTS="$NATIVE_BUILD_OPTS -Djavet.lib.loading.type=system"
+NATIVE_BUILD_OPTS="$NATIVE_BUILD_OPTS -Dquarkus.native.additional-build-args=-J-Djavet.lib.loading.type=custom,-J-Djavet.lib.loading.path=/tmp"
 # How do we avoid custom lib loading in non-native builds and tests?
 EXTENSION_BULID_OPTS="-Dmaven.test.skip=true"
 # Run the test
